src/test/ui/resolve/issue-21221-4.stderr
error[E0405]: trait `T` is not in scope
  --> $DIR/issue-21221-4.rs:20:6
   |
20 | impl T for Foo {}
   |      ^ `T` is not in scope
   |
   = help: you can import it into scope: `use issue_21221_4::T;`.

error: cannot continue compilation due to previous error

